(executable
 (name test)
 (modules test)
 (libraries cmon))

(executable
 (name test_generic)
 (modules test_generic)
 (libraries cmon))

(rule
 (alias runtest)
 (action
  (with-stdout-to test.exe.output (run %{exe:test.exe}))))

(rule
 (alias runtest)
 (deps test.exe)
 (action (diff test.expected test.exe.output)))

(rule
 (alias runtest)
 (action (run %{exe:test_generic.exe})))
